  * fetchaddr: change real name length limit from 30 to 70.  Thanks to
    Andrey Skvortsov for providing a patch (Closes: #780532).
  * vcquery: order N: field: Prefixes GivenName AddName FamilyName Suffix
    (Closes: #578155).
  * Remove lbdb.spec on clean target.
  * Move LIBICONV linking to the end of the cc call to make cygwin happy.

 -- Roland Rosenfeld <roland@debian.org>  Fri, 04 Mar 2016 23:50:20 +0100

lbdb (0.40) unstable; urgency=medium

  * Upgrade to Standards-Version 3.9.6 (no changes).
  * Avoid gpg trustdb check in m_gpg, since this may take a long time
    while lbdb is not responsible.  Thanks to Gregor Zattler for providing
    a patch (Closes: #805235).
  * mutt_ldap_query: escape parentheses, since perl 5.22 complains about
    this otherwise.  Thanks to Olivier Mehani and Francois Charlier.
    (Closes: #812785).  This also solves launchpad bug 1539774 and RedHat
    bug 1259881.
  * Update emacs support (Add dependency on emacsen-common >=2.0.8, add
    emacsen-compat).
  * Run wrap-and-sort.
  * Fix several man page typos.

 -- Roland Rosenfeld <roland@debian.org>  Sat, 30 Jan 2016 09:21:41 +0100

lbdb (0.39) unstable; urgency=low

  * Use dh_autotools-dev (Closes: #727289).
  * Update packaged autotools files.
  * Rebuild aclocal/autoconf.
  * Change debian/source-format to 3.0 (native).
  * Remove mutt-ja from Suggests, since this no longer exists.
  * Upgrade build depenency to debhelper (>= 9).
  * Change debian/compat to "9".
  * Complete rewrite of debian/rules.
  * Now uses hardening via debhelper.
  * Add $CPPFLAGS to $CFLAGS to really use hardening.
  * Upgrade to Standards-Version 3.9.5 (no changes).
  * m_vcf: Optimize missing names handling (Thanks to Jamey Sharp)
    (Closes: #633920).
  * Made debian/copyright machine readable.
  * m_abook: fix formatting (Thanks to Alfredo Finelli) (Closes: #681526).
  * mutt-ldap-query: Add parameters for TLS and SASL_MECH (Thanks to
    Alexandra N. Kossovsky) (Closes: #512074).