@@ -210,6 +210,10 @@ for i in $MODULES ; do
 	MODULES_SH="$MODULES_SH $i.sh"
 done
 
+# some voodoo to replace ${prefix} in perl script (mutt_ldap_query.pl):
+SYSCONF_DIR=`test "$prefix" = NONE && prefix=$ac_default_prefix; eval echo "${sysconfdir}"`
+AC_SUBST(SYSCONF_DIR)
+
 LBDB_VERSION=`sed -e '2,10000d;s/^.*(\(.*\)).*$/\1/' < debian/changelog`
 AC_SUBST(LBDB_VERSION)
 
